--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -255,7 +255,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginBottom="16dp"
-            android:layout_marginLeft="32dp"
+            android:layout_marginStart="15dp"
             android:gravity="center_vertical">
 
             <TextView
